Updated template to reflect current features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
         "--disable=E1101",
         "--disable=W5101",
         "--disable=E1123"   
-   ],
+],
+"jupyter.jupyterServerType": "local",
 }
