--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,4 @@
 *.pyc
-.settings/
-.project
-.pydevproject
-env/
-bigenv/
-.vagrant
-_output/
-_dependencies/
-media/
-#################
-## Eclipse
-#################
-
-*.pydevproject
-.project
-.metadata
-.gradle
-bin/
-tmp/
-target/
-output/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-wdtk_*
-wdtk_processed.csv
-_env/
-_env3/
-conf/config.py
-conf/ssh_creds.py
-static/sass
-*.sqlite3
-Pipfile
+secrets.yaml
+.env
+data/private
