--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,9 +4,11 @@ FROM ghcr.io/mysociety/data_common:latest
 # Override the .pth created at previous stages to point to where the working directory will land
 COPY pyproject.toml poetry.loc[k] /setup/ 
 COPY src/data_common/pyproject.toml src/data_common/poetry.loc[k] /setup/src/data_common/
-RUN mkdir /setup/src/template_data_repo && touch /setup/src/template_data_repo/__init__.py \
-    && touch /setup/src/data_common/__init__.py \
-    && export PATH="$HOME/.poetry/bin:$PATH" \
+RUN mkdir /setup/src/template_data_repo \
+    && touch /setup/src/template_data_repo/__init__.py \
+    && mkdir --parents /setup/src/data_common/src/data_common \
+    && touch /setup/src/data_common/src/data_common/__init__.py \
+    && export PATH="/root/.local/bin:$PATH" \
     && cd /setup/ && poetry install \
     && echo "/workspaces/template_data_repo/src/" > /usr/local/lib/python3.10/site-packages/template_data_repo.pth \
     && echo "/workspaces/template_data_repo/src/data_common/src" > /usr/local/lib/python3.10/site-packages/data_common.pth
