--- a/.github/workflow-templates/build_and_publish.yml
+++ b/.github/workflow-templates/build_and_publish.yml
@@ -1,17 +1,18 @@
-name: Build datasets and deploy
+name: Build datasets and publish
+
+concurrency: 
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 permissions:
   contents: write
   pages: write
   id-token: write
 
-concurrency: 
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-  
 on:
   push: 
     branches: ["main"]
+  workflow_dispatch:
 
 jobs:
 
@@ -28,15 +29,27 @@ jobs:
         uses: ./.github/actions/in-dev-container
         with:
           run: |
-            export PATH="/root/.local/bin:$PATH"
             script/test
             dataset build --all
             dataset version auto --auto-ban major --all --publish
             
       - name: Push new data
+        id: auto-commit-action
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "Update repo data based on source changes"
+
+      - name: Send GitHub Action trigger data to Slack workflow
+        id: slack
+        if: steps.auto-commit-action.outputs.changes_detected == 'true'
+        uses: slackapi/slack-github-action@v1.19.0
+        with:
+          payload: |
+            {
+              "repo_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.HAPPY_DATABOT_SLACK_WEBHOOK }}     
 
       - name: Setup Pages
         uses: actions/configure-pages@v1
@@ -51,6 +64,18 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: docs/_site
+
+      - name: Send GitHub Action trigger data to Slack workflow (if failed)
+        if: ${{ failure() }}
+        id: slack-failed
+        uses: slackapi/slack-github-action@v1.19.0
+        with:
+          payload: |
+            {
+              "repo_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SAD_DATABOT_SLACK_WEBHOOK }}     
 
   deploy:
     environment:
