Export path before running tests

--- a/.github/workflow-templates/build_and_publish.yml
+++ b/.github/workflow-templates/build_and_publish.yml
@@ -29,6 +29,7 @@ jobs:
         uses: ./.github/actions/in-dev-container
         with:
           run: |
+            export PATH="/root/.local/bin:$PATH"
             script/test
             dataset build --all
             dataset version auto --auto-ban major --all --publish
