New linting approach

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,15 +8,18 @@
 	],
 	"postCreateCommand": ".devcontainer/postCreateCommand",
 	"workspaceFolder": "/workspaces/template_data_repo",
-	"extensions": [
-		"ms-vscode.test-adapter-converter",
-		"bungcip.better-toml",
-		"ms-python.python",
-		"ms-python.vscode-pylance",
-		"ms-azuretools.vscode-docker",
-		"valentjn.vscode-ltex"
-	],
 	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-vscode.test-adapter-converter",
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"ms-azuretools.vscode-docker",
+				"valentjn.vscode-ltex",
+				"ms-python.black-formatter",
+				"charliermarsh.ruff"
+			]
+		},
 		"codespaces": {
 			"repositories": {
 				"mysociety/data_common": {
