--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-    "python.defaultInterpreterPath": "/usr/local/bin/python",
+    "python.defaultInterpreterPath": "./.venv/bin/python",
     "python.terminal.activateEnvironment": false,
-    "python.analysis.typeCheckingMode": "basic",
-    "python.analysis.stubPath": "src/data_common/typing",
     "editor.formatOnSave": true,
     "files.exclude": {
         "**/.git": true,
