--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -44,3 +44,4 @@ gem "kramdown-parser-gfm"
 # do not have a Java counterpart.
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 gem "github-pages", "~> 226", group: :jekyll_plugins
+gem "ffi", "<= 1.15.5"
