--- a/.github/workflows-templates/build_and_publish.yml
+++ b/.github/workflows-templates/build_and_publish.yml
@@ -29,10 +29,11 @@ jobs:
         uses: mysociety/run-in-devcontainer@v1
         with:
           run: |
+            uv sync
             export PATH="/root/.local/bin:$PATH"
             script/test
-            dataset build --all
-            dataset version auto --auto-ban major --all --publish
+            uv run dataset build --all
+            uv run dataset version auto --auto-ban major --all --publish
             
       - name: Push new data
         id: auto-commit-action
